main.tf
pterraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-east-1" # Replace with your desired region
}

resource "aws_instance" "example" {
  ami                    = "ami-020cba7c55df1f615" # Replace with a valid AMI for your region
  instance_type          = "t2.micro"
  key_name               = "keypair" # Replace with your key pair name
  vpc_security_group_ids = ["${aws_security_group.allow_ssh.id}"]
  user_data              = file("user_data.sh") # Reference the user data script

  tags = {
    Name = "Example Instance with UserData"
  }
}

resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow SSH inbound traffic"

  ingress {
    description = "SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
